feat: create picker component and example
Summary:
- disable use_flipper in example
- create wheel picker
- use reanimated 2 and gesture-handle dependencies for animation
- use @react-native-masked-view/masked-view for mask components

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -118,7 +118,11 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  * and the benefits of using Hermes will therefore be sharply reduced.
  */
 def enableHermes = project.ext.react.get("enableHermes", false);
-
+buildscript {
+  ext {
+    kotlinVersion = "1.5.20"
+  }
+}
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
