--- a/example/package.json
+++ b/example/package.json
@@ -6,16 +6,21 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start"
+    "start": "react-native start",
+    "postinstall":"npx jetify"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-reanimated": "^2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "babel-plugin-module-resolver": "^4.0.0",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "^0.64.0"
   }
 }
