--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-native": "^0.67.8",
     "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
@@ -61,15 +62,17 @@
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "*",
+    "react-native": "*",
     "react-native-builder-bob": "^0.18.0",
     "release-it": "^14.2.2",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-gesture-handler": "2.*.*",
+    "react-native-reanimated": "2.*.*"
   },
   "jest": {
     "preset": "react-native",
@@ -143,5 +146,15 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-redash": "^16.3.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.40"
   }
 }
