--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "react-native": "*",
     "react-native-gesture-handler": "2.*.*",
     "react-native-reanimated": "2.*.*",
-    "@react-native-masked-view/masked-view":"*"
+    "@react-native-masked-view/masked-view":"*",
+    "react-native-redash":"16.*.*"
   },
   "jest": {
     "preset": "react-native",
