--- a/package.json
+++ b/package.json
@@ -70,11 +70,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*",
-    "react-native-gesture-handler": "2.*.*",
-    "react-native-reanimated": "2.*.*",
-    "@react-native-masked-view/masked-view": "*",
-    "react-native-redash": "16.*.*"
+    "react-native": "*"
   },
   "jest": {
     "preset": "react-native",
